# libdatadog

./: Cargo.toml  flake.nix  rust-toolchain.toml
ddtelemetry/: Cargo.toml
ddtelemetry/examples/: tm-forked-agent.rs
ddtelemetry/src/: lib.rs
ddtelemetry/src/ipc/setup/: unix.rs
ddtelemetry/src/ipc/sidecar/: unix.rs
ddtelemetry/src/sockets/: mod.rs
ddtelemetry/src/sockets/message/: mod.rs
ddtelemetry/src/sockets/transport/: blocking.rs  handles.rs  mod.rs  tests.rs  transport.rs
ddtelemetry/src/sockets/transport/channel/: codec.rs  mod.rs
ddtelemetry/src/sockets/transport/channel/platform/: mod.rs  unix.rs  unix_test.rs
ddtelemetry/src/sockets/transport/channel/platform/unix/: async_channel.rs  channel.rs  mod.rs  platform_handle.rs  tests.rs
sidecar/: Cargo.toml
sidecar/src/: connections.rs  ipc.rs  ipc_agent.rs  java.rs  lib.rs  libc_main.rs  mini_agent.rs  tracing.rs
sidecar/src/tracing/: trace_events.rs  uploader.rs
spawn_worker/: Cargo.toml
spawn_worker/src/unix/: mod.rs  utils.rs
tests/spawn_from_lib/src/: lib.rs
tools/cc_utils/src/: lib.rs
tools/xtask/: Cargo.toml  README.md
windows/: devenv.dsc.yaml
