[package]
edition = "2021"
license = "Apache 2.0"
name = "ddtelemetry"
version = "0.7.0-rc.1"

[dependencies]
anyhow = { version = "1.0" }
ddcommon = { path = "../ddcommon" }
futures = { version = "0.3" }
http = "0.2"
hyper = {version = "0.14", features = ["client"], default-features = false}
lazy_static = {version = "1.4"}
regex = {version = "1"}
sendfd = {version = "0.4", features = ["tokio"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
sys-info = {version = "0.9.0"}
tokio = {version = "1.17", features = ["sync"]}
tokio-util = {version = "0.6.9", features = ["codec"]}
tokio-serde = {version = "0.8", features = ["messagepack"]}
tracing = {version = "0.1", default-features = false, features = ["std"], optional = true}
uuid = {version = "0.8.2", features = ["v4"]}
libc = {version = "0.2"}
bincode = {version = "1.3"}
bytes = {version = "1.1"}
tarpc = {version = "0.29", features = ["serde-transport"]}
pin-project = "1"
ipc-channel = {version = "0.16.0", default-features = false, features = ["async"]}
socket2 = {version="0.4"}

[features]
default = []

[[example]]
name = "tm-worker-test"
required-features = ["tracing"]

[dev-dependencies]
tempfile = {version= "3.3"}
libc = {version = "0.2"}
nix = {version = "0.24"}
tokio = {version = "1.17", features = ["macros", "rt-multi-thread"]}
tracing-subscriber = {version = "0.3.11"}

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2" }

[target.'cfg(not(windows))'.dev-dependencies]
rlimit = { version = "0.8" }
nix = { version = "0.24" }
